# ur5e-docker

./: Dockerfile  README.md  docker-compose.yaml  ur5e.repos
.github/workflows/: build-docker-image.yaml
demo/: Dockerfile  compose.calibration.yaml  compose.moveit-menager.yaml  compose.rviz.yaml  compose.ur3-gazebo.yaml  compose.ur3.yaml  compose.ur5e-gazebo.yaml  compose.ur5e.yaml  compose.velodyne.yaml  docker-compose.yaml  ros_entrypoint.sh  setup_virtual_desktop.sh  start_docker.sh
demo/gazebo/: compose.ur3-gazebo.yaml  compose.ur5e-gazebo.yaml  compose.ur5e-rg2-gazebo.yaml
ur/: CMakeLists.txt  package.xml  ur.repos
ur3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur3_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml  ur3.srdf
ur3_moveit_config/launch/: load_ur3.launch  move_group.launch  planning_context.launch  ros_controllers.launch
ur3_moveit_config/urdf/: panther_ur3.urdf.xacro
ur5e/: CMakeLists.txt  package.xml  ur5e.repos
ur5e_bringup/: CMakeLists.txt  package.xml
ur5e_bringup/config/: rviz_config.rviz  ur5e_calibration.yaml  ur5e_controllers.yaml
ur5e_bringup/launch/: ur5e_bringup.launch  ur5e_gazebo.launch
ur5e_components_description/: CMakeLists.txt  package.xml
ur5e_components_description/urdf/: power_supply.urdf.xacro  upper_rails.urdf.xacro
ur5e_moveit_config/: .setup_assistant  CMakeLists.txt  assets.repos  package.xml
ur5e_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  ur5e.srdf
ur5e_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  load_ur5e.launch  move_group.launch  planning_context.launch  ros_controllers.launch
ur5e_moveit_config/urdf/: external_antena_macro.urdf.xacro  panther_base_macro.urdf.xacro  panther_temp_macro.urdf.xacro  panther_ur5e.urdf.xacro  power_supply_macro.xacro  upper_rails.urdf.xacro  ur_macro.xacro
ur5e_onrobot_rg2_moveit_config/: .setup_assistant  CMakeLists.txt  assets.repo  assets.repos  package.xml
ur5e_onrobot_rg2_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  rg2_controllers.yaml  ros_controllers.yaml  ur5e_rg2.srdf
ur5e_onrobot_rg2_moveit_config/launch/: load_ur5e.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  rg2_bringup_gazebo.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  ur5e_moveit_controller_manager.launch.xml
ur5e_onrobot_rg2_moveit_config/scripts/: open_rg.script  test.py
ur5e_onrobot_rg2_moveit_config/urdf/: panther_ur5e_rg2.urdf.xacro
ur_bringup/: CMakeLists.txt  package.xml
ur_bringup/config/: rg2_controllers.yaml  rviz_config.rviz  ur3_calibration.yaml  ur3_controllers.yaml  ur5e_controllers.yaml
ur_bringup/launch/: ur3_bringup.launch  ur3_gazebo.launch  ur5e_bringup.launch  ur5e_gazebo.launch  ur5e_rg2_gazebo.launch
ur_components_description/: CMakeLists.txt  package.xml
ur_components_description/meshes/: upper_rails.stl
ur_components_description/meshes/onrobot/: hand.dae
ur_components_description/urdf/: onrobot_rg2.urdf.xacro  power_supply.urdf.xacro  upper_rails.urdf.xacro
