<?xml version="1.0"?>
<package format="3">

  <name>ur5e_moveit_config</name>
  <version>1.0.0</version>
  
  <description>
     Package with all the configuration and launch files for using the ur5e with the MoveIt Motion Planning Framework
  </description>

  <author email="pawel.kowalski@husarion.com">Pawel Kowalski</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/panther_description/tree/ros1</url>
  <url type="bugtracker">https://github.com/husarion/panther_description/issues</url>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_benchmarks</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_ros_warehouse</exec_depend>
  <exec_depend>warehouse_ros_mongo</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>trac_ik_kinematics_plugin</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
