<?xml version="1.0"?>
<package format="3">
  <name>ur_bringup</name>
  <version>0.0.1</version>

  <description>Default launch files and configuration used to start UR5e</description>
  <license>Apache License 2.0</license>

  <author email="pawel.kowalski@husarion.com">Pawel Kowalski</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/ur5e-docker</url>
  <url type="bugtracker">https://github.com/husarion/ur5e-docker/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ur_calibration</depend>
  <depend>ur_robot_driver</depend>
  <depend>ur5e_moveit_config</depend>

  <export></export>
</package>